fix video cards overlapping

--- a/frontend/src/app/scenes/meeting-page/components/meeting/meeting.component.sass
+++ b/frontend/src/app/scenes/meeting-page/components/meeting/meeting.component.sass
@@ -68,12 +68,10 @@
     align-items: center
     overflow-y: scroll
     height: 100%
-    overflow: hidden
     
 app-participant-card
     width: 50%
     max-width: 560px
-    max-height: 50%
     padding: 5px
 
 .participant-fullscreen
